# ESP32

./: README.md  oke.txt
ESP_Library/: sdkconfig  sdkconfig.old
ESP_Library/common/CoAP/: hadilao_coap_client.c
ESP_Library/common/ble/: ble_hadilao.c  ble_hadilao.h
ESP_Library/common/cfg/: common.c
ESP_Library/common/mqtt/: CMakeLists.txt  mqtt_hadilao.c  mqtt_hadilao.h
ESP_Library_Common/: README.md  sdkconfig  sdkconfig.old
ESP_Library_Common/common/CoAP/: CMakeLists.txt  Kconfig.projbuild  hadilao_coap_client.c  hadilao_coap_client.h  hadilao_coap_server.h
ESP_Library_Common/common/ble/: ble_hadilao.c  ble_hadilao.h
ESP_Library_Common/common/input/: CMakeLists.txt  input_hadilao.c  input_hadilao.h
ESP_Library_Common/common/output/: CMakeLists.txt  output_hadilao.h
ESP_Library_Common/common/uart/: uart_hadilao.c  uart_hadilao.h
ESP_Library_Common/common/webserver/: web_hadilao.c  web_hadilao.h
ESP_Library_Common/main/: app_main.c
Ref_IoT/: 1. Giới thiệu về IoT.pdf.url  2.0 Mô hình mạng.pdf.url  2.1 Giới thiệu lớp liên kết dữ liệu.pdf.url  2.2 Giới thiệu lớp mạng.pdf.url  2.2.1 IPv4.pdf.url  2.3 Giới thiệu lớp giao vận.pdf.url
coap_client/: sdkconfig  sdkconfig.old
coap_client/main/: coap_client_example_main.c
coap_server/: sdkconfig  sdkconfig.old
continuous_read/main/: continuous_read_main.c
http_request_thingspeak/: sdkconfig  sdkconfig.old
http_request_thingspeak/main/: app_main.c
oneshot_read/main/: oneshot_read_main.c
stupid_board/: CMakeLists.txt  sdkconfig
stupid_board/main/: CMakeLists.txt  app_main.c
time_sync/: CMakeLists.txt
time_sync/main/: CMakeLists.txt  app_main.c
time_sync/main/wifi/: wifi_ap.c  wifi_sta.c
uart_TTL/main/: app_main.c
(+11 files in other folders)
